@@ -45,7 +45,6 @@
 ===============================================================================
 - Force mouse to stay inside application screen in windowed mode
 - Check collision before placing building
-- When unit pop-up after training or building, find a suitable location (with no collision)
 - Ignore units behind HUD during 'selection mode'
 - When starting pos of selection square is out of screen, some bar should be truncated
 - When a peon is in 'CHOOSE_BUILDING' and goes unselected, it doesn't reset its state
